# openapi-build-gen

./: .gitignore  Cargo.toml  README.md
examples/: self.rs
examples/api-server/: Cargo.toml  build.rs
examples/api-server/src/: api.rs  main.rs  swagger.html
src/: axum.rs  lib.rs  main.rs  openapi.rs  parser.rs  schema.rs
