[package]
name = "openapi-build-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openapi-build-gen"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
